--- a/stan-overview/stan-overview.tex
+++ b/stan-overview/stan-overview.tex
@@ -7319,6 +7319,24 @@ limits at boundaries, e.g., {\small \code{multiply\_log()}}
 \end{itemize}
 
 
+\sld{Probability}
+\begin{quote}
+\footnotesize
+We must remember that the probability of an event is not a quality of the event itself, but a mere name for the degree of ground which we, or some one else, have for expecting it.
+\\ \mbox{ } \hfill {\scriptsize ---John Stuart Mill, 1882, {\it A System of Logic.} 8th Ed.}
+\end{quote}
+%
+\begin{quote}
+\footnotesize
+An intellect which at a certain moment would know all forces that set nature in motion, and all positions of all items of which nature is composed $\ldots$; for such an intellect nothing would be uncertain and the future just like the past would be present before its eyes.
+\\ \mbox{ } \hfill {\scriptsize ---Pierre-Simon Laplace, 1814, {\it A Philosophical Essay on Prob.}}
+\end{quote}
+%
+\begin{quote}
+\footnotesize
+The theory [quantum mechanics] says a lot, but does not really bring us any closer to the secret of the ``old one.'' I, at any rate, am convinced that He does not throw dice.
+\\ \mbox{ } \hfill {\scriptsize ---Albert Einstein, 1926, Letter to Max Born}
+\end{quote}
 
 \mypart{}{The End}
 
